--- a/public/html/sync.html
+++ b/public/html/sync.html
@@ -27,7 +27,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light fixed-top" style='background-color: white'>
         <div class='container'>
-            <a class="navbar-brand" href="/" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
+            <a class="navbar-brand" href="/homepage" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,16 +35,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/homepage" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#explore" style='color:rgb(33, 83, 116)'>Explore</a>
+                        <a class="nav-link" href="/log" style='color:rgb(33, 83, 116)'>Log a Workout</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login" style='color:rgb(33, 83, 116)'>Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/signup" style='color:rgb(33, 83, 116)'>Sign Up</a>
+                        <a class="nav-link" href="/view" style='color:rgb(33, 83, 116)'>View Workouts</a>
                     </li>
 
                 </ul>
