--- a/public/html/login.html
+++ b/public/html/login.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top"  style='background-color: white'>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" style='background-color: white'>
         <div class='container'>
             <a class="navbar-brand" href="/" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -28,11 +28,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto" >
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="/" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
                     </li>
-                   
+
                     <li class="nav-item">
                         <a class="nav-link" href="/login" style='color:rgb(33, 83, 116)'>Login</a>
                     </li>
@@ -47,7 +47,7 @@
 
 
     <div class='container-fluid' style='width:100%'>
-        <div class='row justify-content-center' style='padding: 100px 0 0 0; background-color: rgb(33, 83, 116)'>
+        <div class='row justify-content-center mb-5' style='padding: 100px 0 0 0; background-color: rgb(33, 83, 116)'>
             <h2 style='color:white; padding: 25px 0 '>Login</h2>
         </div>
         <div class='row justify-content-center'>
@@ -61,19 +61,18 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="control-label">password</label>
+                    <label for="password" class="control-label">Password</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="password" />
+                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" />
                     </div>
                 </div>
-        
-                <button type="submit" id='submit' class="btn btn-primary">Submit</button>
+
+                <button type="submit" id='submit' class="btn btn-primary mt-3">Submit</button>
 
             </form>
 
         </div>
-    </div>
     </div>
 
 
