--- a/public/html/index.html
+++ b/public/html/index.html
@@ -90,10 +90,10 @@
         </div>
       </div>
       <div class="col-md-12 col-lg-3 text-center d-flex flex-column justify-content-around">
-        <h3 class="display-4 mt-3 mt-lg-5" id="fitness-indicator" style="color: red"> <i id= 'fitnessArrow' ></i></i>Fitness</h3>
-        <h3 class="display-4 mb-3 mb-lg-5" id="stress-indicator" style="color: red"> <i id = 'fatigueArrow'></i>Stress</h3>
+        <h3 class="display-4 mt-3 mt-lg-5" id="fitness-indicator" > <i id= 'fitnessArrow' ></i>Fitness</h3>
+        <h3 class="display-4 mb-3 mb-lg-5" id="stress-indicator" > <i id = 'fatigueArrow'></i>Stress</h3>
         
-            <h6 class="text-center" id="recommendation">You Need To Rest</h6>
+            <h6 class="text-center" id="recommendation">No recommendation available.</h6>
          
       </div>
     </div>
